# rfidy

./: README.md
rfidy-api/: pyproject.toml  requirements.txt
